<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    android:keepScreenOn="true"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/ign_title"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:background="@color/huiwei"
        android:gravity="center"
        android:text="@string/title_two_line"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/ign_titles"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/ign_flow_menu"
        app:layout_constraintStart_toEndOf="@id/ign_title"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_simulation_weight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray_80"
            android:gravity="center"
            android:text="@string/tare_kg"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray_80"
            android:gravity="center"
            android:text="@string/weight_kg"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray_80"
            android:gravity="center"
            android:text="@string/price_kg"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/pink"
            android:gravity="center"
            android:text="@string/total_price"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/ign_title"
        app:layout_constraintEnd_toEndOf="@id/ign_titles"
        app:layout_constraintStart_toStartOf="@id/ign_titles"
        app:layout_constraintTop_toBottomOf="@id/ign_titles">

        <TextView
            android:id="@+id/tv_weight_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray_80"
            android:gravity="center"
            android:text="0.000"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_weight_good"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray_80"
            android:gravity="center"
            android:text="0.000"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray_80"
            android:gravity="center"
            android:text="0.00"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_price_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/pink"
            android:gravity="center"
            android:text="0.00"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_state"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/clickable_tv"
        android:backgroundTint="@color/gray_80"
        android:gravity="center_vertical|start"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:text="放置物品于秤盘，或点击此处识别"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/ign_titles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ign_title" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FAFBFC"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,2:1"
        app:layout_constraintEnd_toStartOf="@id/ign_flow_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_state" />


    <LinearLayout
        android:id="@+id/ign_flow_menu"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <FrameLayout
            android:layout_width="360dp"
            android:layout_height="180dp"
            android:background="@color/gray_80"
            android:scaleType="fitCenter">

            <!--            <TextureView-->
            <!--                android:id="@+id/tex_preview"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:visibility="visible" />-->
            <ImageView
                android:id="@+id/sv_recording"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />

            <com.techvision.aipos.util.DrawView
                android:id="@+id/drawview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tv_open_rtsp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:background="#FF808080"
                android:gravity="center"
                android:padding="16dp"
                android:text="点击开启预览"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:background="#D0FFFFFF"
                android:gravity="center"
                android:padding="2dp"
                android:text="预\n览\n画\n面" />
        </FrameLayout>


                <FrameLayout
                    android:id="@+id/fl_item"
                    android:layout_width="360dp"
                    android:layout_height="270dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray_80"
                    android:visibility="gone"
                    android:scaleType="fitCenter">

                    <ImageView
                        android:id="@+id/iv_item_main"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|top"
                        android:background="#D0FFFFFF"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="物\n品\n图\n片" />

                    <TextView
                        android:id="@+id/mask_logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/gray_80"
                        android:gravity="start|center_vertical"
                        android:padding="24dp"
                        android:text="@string/logo_mask"
                        android:textColor="@color/white"
                        android:textSize="24sp" />


                </FrameLayout>


        <TextView
            android:id="@+id/tv_good_name"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:background="@color/huiwei"
            android:gravity="center"
            android:text="@string/good_name"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/btn_clean"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"

            android:background="@drawable/clickable_tv"
            android:backgroundTint="@color/gray_80"
            android:gravity="center"
            android:text="@string/clean"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/clickable_tv"
            android:backgroundTint="@color/pink"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/cprt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/cpry_one_line"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>